# oil-prices-forecasting

./: README.md  models_trainer.ipynb
model/: models_trainer.ipynb
parser/datasets/: brent_oil_historical_data.csv  is.ru_news_links.csv  neftegaz.ru_news_links.csv
parser/notebooks/: clearing_dataset.ipynb  marking_dataset.ipynb  merge_two_files.py  news-dataset.ipynb
parser/parser/: parser_iz.ru_neft.py  parser_iz.ru_neft_json.py  parser_neftegaz.ru_links.py  pyproject.toml
prepare/: pyproject.toml
prepare/notebooks/: clearing_dataset.ipynb  marking_dataset.ipynb  merge_two_files.py
prepare/parser/: parser_neftegaz.ru_links.py  parser_neftegaz.ru_neft.py
